--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,3 @@
-@"
-[build]
+﻿[build]
   command = "npm run build"
   publish = "dist"
-
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Content-Type = "application/javascript"
-
-[[headers]]
-  for = "/*.css"
-  [headers.values]
-    Content-Type = "text/css"
-
-[[headers]]
-  for = "/*.html"
-  [headers.values]
-    Content-Type = "text/html; charset=utf-8"
-"@ | Out-File -FilePath netlify.toml -Encoding UTF8
